...
            android:paddingBottom="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <CheckBox
                android:id="@+id/flat_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/townhouse_checkbox"
                app:layout_constraintHorizontal_weight="0.5"
                android:text="@string/property_type_flat" />

            <CheckBox
                android:id="@+id/townhouse_checkbox"
                android:layout_width="0dp"
...
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/flat_checkbox"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_weight="0.5"
                android:text="@string/property_type_townhouse" />
            <CheckBox
                android:id="@+id/penthouse_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/house_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/flat_checkbox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_weight="0.5"
                android:text="@string/property_type_penthouse" />

            <CheckBox
...
                app:layout_constraintStart_toEndOf="@+id/penthouse_checkbox"
                app:layout_constraintTop_toBottomOf="@+id/townhouse_checkbox"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="0.5"
                android:text="@string/property_type_house" />
            <CheckBox
                android:id="@+id/duplex_checkbox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toStartOf="@+id/none_checkbox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/penthouse_checkbox"
                app:layout_constraintHorizontal_weight="0.5"
...
            android:layout_height="wrap_content"
            android:text="@string/property_type"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/all_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:translationY="-6dp"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end"
...
                android:layout_marginTop="24dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="16dp"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/in_sale_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/property_status_in_sale" />

                <RadioButton
                    android:id="@+id/for_rent_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/property_status_for_rent" />

                <RadioButton
                    android:id="@+id/sold_radio_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingEnd="16dp"
                    android:layout_marginTop="12dp"
                    android:text="@string/property_status_sold" />
            </LinearLayout>
...
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/in_sale_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:layout_marginTop="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
...
                        android:focusable="false"
                        android:hint="@string/property_entry_date"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/for_rent_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:enabled="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
...
                        android:focusable="false"
                        android:hint="@string/property_entry_date"
                        android:inputType="number" />
                </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/sold_entry_date_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:enabled="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
...
                            android:focusable="false"
                            android:hint="@string/property_entry_date"
                            android:inputType="number" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/sold_date_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:enabled="false"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
...
